--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>monitor-jenkins</finalName>
 	</build>
 
 </project>
